2015-01-26 belangeo <belangeo@gmail.com>

    * Added new objet: Particle, a full control granular synthesis generator.
    - rev 1281

2015-01-24 belangeo <belangeo@gmail.com>

    * Added setSync method to Granule object. Allow to toggle between synchronous 
    and asynchronous granulation. Added noteon and noteoff trigger streams to Notein 
    object.

    - rev 1280

2014-12-03 belangeo <belangeo@gmail.com>

    * Added new objet: PeakAmp, a peak amplitude follower.
    - rev 1277

-------------------------------------------------------------------------------------

2014-10-17 belangeo <belangeo@gmail.com>

    * Release tag: 0.7.3.
    - rev 1273

2014-11-15 belangeo <belangeo@gmail.com>

    * Added new objet: Scope, an audio waveform display.
    - rev 1270

2014-11-12 belangeo <belangeo@gmail.com>

    * E-Pyo: Fix marker's line numbering.
    - rev 1267

2014-11-08 belangeo <belangeo@gmail.com>

    * E-Pyo: Added Save As Template... menu item.
    - rev 1263

2014-11-02 belangeo <belangeo@gmail.com>

    * Fixed bug in Fader decreasing ramp.
    - rev 1262

2014-10-28 belangeo <belangeo@gmail.com>

    * Added midi output methods to the Server object. noteout, afterout, ctlout, programout, pressout and bendout.
    - rev 1261

2014-10-28 belangeo <belangeo@gmail.com>

    * Server.setMidiOutputDevice(idx) with `idx` greater than the higher portmidi devices index opens all available output devices.
    - rev 1260

2014-10-24 belangeo <belangeo@gmail.com>

    * Added new object: FToM, converts an audio stream containning frequencies in hertz to a midi note audio stream.
    - rev 1259

2014-10-23 belangeo <belangeo@gmail.com>

    * Added new function: hzToMidi, converts a frequency in hertz to a midi note value.
    - rev 1258

-------------------------------------------------------------------------------------

2014-10-17 belangeo <belangeo@gmail.com>

    * Release tag: 0.7.2.
    - rev 1256

2014-10-16 belangeo <belangeo@gmail.com>
