@@ -1,3 +1,9 @@
+2015-01-29 belangeo <belangeo@gmail.com>
+
+    * Added new function: floatmap, 0-1 range mapper. Fixed bug in DataTable initialization 
+    and added an automatic refresh of the DataTable grapher window.
+    - rev 1282
+
 2015-01-26 belangeo <belangeo@gmail.com>
 
     * Added new objet: Particle, a full control granular synthesis generator.
